# latticeadaptor

./: .readthedocs.yml  API.rst  AUTHORS.rst  HISTORY.rst  README.rst  TUTORIALS.rst  db.json  environment.yml  micc.json  pyproject.toml  requirements.txt  templatticestringfile.tmp
docs/: Makefile  conf.py  fodo.seq  fodob.seq  index.rst  installation.rst  requirements.txt  test.seq
docs/notebook/: Tutorial.ipynb  bessy_base.seq  fodob.seq  lattice.lat  lattice.lte  lattice.madx  lattice2.seq  templatticestringfile.tmp
latticeadaptor/: __init__.py  core.py
latticeadaptor/lark/: Madx.lark  __init__.py
latticeadaptor/mappings/: __init__.py  elegant_attribute_map.json  elegant_columns.json  elegant_element_map.json  madx_columns.json  tracy_attribute_map.json  tracy_columns.json  tracy_element_map.json
latticeadaptor/parsers/: __init__.py
latticeadaptor/utils/: __init__.py
tests/: __init__.py  test_core.py  test_lark.py  test_latticeadaptor.py  test_mappings.py  test_parsers.py  test_utils.py
