[tool.poetry]
name = "latticeadaptor"
version = "0.3.8"
description = "<Enter a one-sentence description of this project here.>"
authors = ["Tom Mertens <your.email@whatev.er>"]
license = "MIT"

readme = 'README.rst'

repository = "https://github.com/tomerten/latticeadaptor"
homepage = "https://github.com/tomerten/latticeadaptor"

keywords = ['packaging', 'poetry']

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.4"
lark = "^0.11.3"
matplotlib = "^3.4.1"
termcolor = "^1.1.0"
cpymad = "^1.8.1"
ipython = "^7.23.1"
LatticeJSON = "^0.1.5"
latticeconstructor = "^0.2.2"
nbsphinx = "^0.8.5"
pandoc = "^1.0.2"
ipykernel = "^5.5.5"

[tool.poetry.dev-dependencies]
pytest = "^4.4.2"
black = "^21.5b0"
isort = "^5.8.0"
pylint = "^2.8.2"

[tool.poetry.scripts]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
